--- a/backend/install
+++ b/backend/install
@@ -8,6 +8,9 @@ if [ ! -d ".venv" ]; then
 fi
 .venv/bin/python -m pip install -r requirements.txt -q
 
+echo "[install] Ensuring data directory exists..."
+mkdir -p data
+
 # install/update systemd service
 echo "[install] Installing systemd service..."
 sudo cp systemd/aoife.service /etc/systemd/system/aoife.service
